css/styles.css
/* #########################################
   #                MISC.                  #
   ######################################### */
.pageBody {
	margin-top:1em;
}

body {
	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   	font-weight: 300;
	font-size:1.5em;
}

hr {
	border-width:4px;
}

body.home {
	background: url(images/background.jpg) no-repeat center center fixed;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

#homeHeader {
	font-size:5em;
	color:white;
}

#homeText {
	font-size:1.5em;
	margin-top:1.5em;
	margin-bottom:2.5em;
	color: white;
}

.bodyText {
	font-size:1.3em;
	text-align: center;
	margin-top:2em;
	margin-bottom:2em;
	color:#212121;
}

.disclaimer {
	font-size:0.8em;
	text-align: center;
	margin-top:1em;
	margin-bottom:2em;
	color:#212121;
	padding: 0 5em;
}

.pageHeader {
	font-size:3em;
	font-weight:400;
	color:#212121;
	text-align: center;
}

.vcenter {
  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
  min-height: 100vh; /* These two lines are counted as one :-)       */

  display: flex;
  align-items: center;

}

.myBackground {
  background-color: rgba(255,255,255, 0.0);
  color: inherit;
}

/* centered columns styles */
.c-center {
    display:table !important;
    height:300px;
}

.content {
    display:table-cell;
    vertical-align:middle;
    text-align:center;
}

.greyDiv {
	background-color:#DDD;
}

.container-fluid {
	padding:4em 2em;
}

.bottomBtn {
	position: relative;
	height:200px;
}

.bottomBtn a {
	  position: absolute;
	  top: 40%;
	  left: 40%;
}

.hero-spacer {
    margin-top: 50px;
}

.hero-feature {
    margin-bottom: 30px;
}


/* #########################################
   #                NAV BAR                #
   ######################################### */
.navbar-custom {
	background-color: #252839;
}


/* TITLE */
.navbar-custom .navbar-brand {
	color: #f2b632;
}

.navbar-custom .navbar-brand:hover,
.navbar-custom .navbar-brand:focus {
	 color: #b5b5b7;
}


/* LINK */
.navbar-custom .navbar-nav > li > a {
	color: #b5b5b7;
}

.navbar-custom .navbar-nav > li > a:hover,
.navbar-custom .navbar-nav > li > a:focus {
	color: #f2b632;
	background-color: transparent;

}

.navbar-custom .navbar-nav > .active > a,
.navbar-custom .navbar-nav > .active > a:hover,
.navbar-custom .navbar-nav > .active > a:focus {
	color: #555;
	background: #b5b5b7;
}

.navbar-custom .navbar-nav > .open > a,
.navbar-custom .navbar-nav > .open > a:hover,
.navbar-custom .navbar-nav > .open > a:focus {
	color: #555;
	background: #b5b5b7;
}

a:active {
	background: #b5b5b7;
}


/* CARET */
.navbar-custom .navbar-nav > .dropdown > a .caret {
	border-top-color: #777;
	border-bottom-color: #777;
}

.navbar-custom .navbar-nav > .dropdown > a:hover .caret,
.navbar-custom .navbar-nav > .dropdown > a:focus .caret {
	border-top-color: #333;
	border-bottom-color: #333;
}

.navbar-custom .navbar-nav > .open > a .caret,
.navbar-custom .navbar-nav > .open > a:hover .caret,
.navbar-custom .navbar-nav > .open > a:focus .caret {
	 border-top-color: #555;
	 border-bottom-color: #555;
}


/* MOBILE VERSION */
.navbar-custom .navbar-toggle {
	border-color: #DDD;
}
.navbar-custom .navbar-toggle:hover,
.navbar-custom .navbar-toggle:focus {
	background-color: #f2b632;

}

.navbar-custom .navbar-toggle .icon-bar {
	background-color: #f2b632;
}

.navbar-custom .navbar-toggle:hover .icon-bar {
    background-color: #252839;
}

@media (max-width: 767px) {
	.navbar-custom .navbar-nav .open .dropdown-menu > li > a {
		color: #777;
	}
	.navbar-custom .navbar-nav .open .dropdown-menu > li > a:hover,
	.navbar-custom .navbar-nav .open .dropdown-menu > li > a:focus {
		color: #333;
	}
}

/* #########################################
   #                SEARCH                 #
   ######################################### */
.dropdown.dropdown-lg .dropdown-menu {
    margin-top: -1px;
    padding: 6px 20px;
}
.input-group-btn .btn-group {
    display: flex !important;
}
.btn-group .btn {
    border-radius: 0;
    margin-left: -1px;
}
.btn-group .btn:last-child {
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
}
.btn-group .form-horizontal .btn[type="submit"] {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}
.form-horizontal .form-group {
    margin-left: 0;
    margin-right: 0;
}
.form-group .form-control:last-child {
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
}

@media screen and (min-width: 768px) {
    #adv-search {
        width: 500px;
        margin: 0 auto;
    }
    .dropdown.dropdown-lg {
        position: static !important;
    }
    .dropdown.dropdown-lg .dropdown-menu {
        min-width: 500px;
    }
}

/* #########################################
   #               BUTTONS                 #
   ######################################### */
.btn-outline {
    background-color: transparent;
    color: inherit;
    transition: all .5s;
}

.btn-primary.btn-outline {
    color: #428bca;
}

.btn-success.btn-outline {
    color: #5cb85c;
}

.btn-info.btn-outline {
    color: #5bc0de;
}

.btn-warning.btn-outline {
    color: #f2b632;
}

.btn-danger.btn-outline {
    color: #d9534f;
}

.btn-primary.btn-outline:hover,
.btn-success.btn-outline:hover,
.btn-info.btn-outline:hover,
.btn-warning.btn-outline:hover,
.btn-danger.btn-outline:hover {
    color: #fff;
}

.myBackground {
	padding-top:5em;
}


/* #####################################################################
   #
   #   Project       : Modal Login with jQuery Effects
   #   Author        : Rodrigo Amarante (rodrigockamarante)
   #   Version       : 1.0
   #   Created       : 07/28/2015
   #   Last Change   : 08/02/2015
   #
   ##################################################################### */

@import url(http://fonts.googleapis.com/css?family=Roboto);

* {
    font-family: 'Roboto', sans-serif;
}

#login-modal .modal-dialog {
    width: 350px;
}

#login-modal input[type=text], input[type=password] {
	margin-top: 10px;
}

#div-login-msg,
#div-lost-msg,
#div-register-msg {
    border: 1px solid #dadfe1;
    height: 30px;
    line-height: 28px;
    transition: all ease-in-out 500ms;
}

#div-login-msg.success,
#div-lost-msg.success,
#div-register-msg.success {
    border: 1px solid #68c3a3;
    background-color: #c8f7c5;
}

#div-login-msg.error,
#div-lost-msg.error,
#div-register-msg.error {
    border: 1px solid #eb575b;
    background-color: #ffcad1;
}

#icon-login-msg,
#icon-lost-msg,
#icon-register-msg {
    width: 30px;
    float: left;
    line-height: 28px;
    text-align: center;
    background-color: #dadfe1;
    margin-right: 5px;
    transition: all ease-in-out 500ms;
}

#icon-login-msg.success,
#icon-lost-msg.success,
#icon-register-msg.success {
    background-color: #68c3a3 !important;
}

#icon-login-msg.error,
#icon-lost-msg.error,
#icon-register-msg.error {
    background-color: #eb575b !important;
}

#img_logo {
    max-height: 100px;
    max-width: 100px;
}

/* #########################################
   #    override the bootstrap configs     #
   ######################################### */

.modal-backdrop.in {
    filter: alpha(opacity=50);
    opacity: .8;
}

.modal-content {
    background-color: #ececec;
    border: 1px solid #bdc3c7;
    border-radius: 0px;
    outline: 0;
}

.modal-header {
    min-height: 16.43px;
    padding: 15px 15px 15px 15px;
    border-bottom: 0px;
}

.modal-body {
    position: relative;
    padding: 5px 15px 5px 15px;
}

.modal-footer {
    padding: 15px 15px 15px 15px;
    text-align: left;
    border-top: 0px;
}

.checkbox {
    margin-bottom: 0px;
}

.btn {
    border-radius: 0px;
}

.btn:focus,
.btn:active:focus,
.btn.active:focus,
.btn.focus,
.btn:active.focus,
.btn.active.focus {
    outline: none;
}

.btn-lg, .btn-group-lg>.btn {
    border-radius: 0px;
}

.btn-link {
    padding: 5px 10px 0px 0px;
    color: #95a5a6;
}

.btn-link:hover, .btn-link:focus {
    color: #2c3e50;
    text-decoration: none;
}

.glyphicon {
    top: 0px;
}

.form-control {
  border-radius: 0px;
}


/* #########################################
   #            SEARCH RESULTS             #
   ######################################### */

@import "http://fonts.googleapis.com/css?family=Roboto:300,400,500,700";

.mb20 { margin-bottom: 20px; margin-top:3em; }

hgroup { padding-left: 15px; border-bottom: 1px solid #ccc; }
hgroup h1 { font: 500 normal 1.625em "Roboto",Arial,Verdana,sans-serif; color: #2a3644; margin-top: 0; line-height: 1.15; }
hgroup h2.lead { font: normal normal 1.125em "Roboto",Arial,Verdana,sans-serif; color: #2a3644; margin: 0; padding-bottom: 10px; }

.search-result .thumbnail { border-radius: 0 !important; }
.search-result:first-child { margin-top: 0 !important; }
.search-result { margin-top: 20px; }
.search-result .col-md-2 { border-right: 1px dotted #ccc; min-height: 140px; }
.search-result ul { padding-left: 0 !important; list-style: none;  }
.search-result ul li { font: 400 normal .85em "Roboto",Arial,Verdana,sans-serif;  line-height: 30px; }
.search-result ul li i { padding-right: 5px; }
.search-result .col-md-7 { position: relative; }
.search-result h3 { font: 500 normal 1.375em "Roboto",Arial,Verdana,sans-serif; margin-top: 0 !important; margin-bottom: 10px !important; }
.search-result h3 > a, .search-result i { color: #248dc1 !important; }
.search-result p { font: normal normal 1.125em "Roboto",Arial,Verdana,sans-serif; }
.search-result span.plus { position: absolute; right: 0; top: 126px; }
.search-result span.plus a { background-color: #248dc1; padding: 5px 5px 3px 5px; }
.search-result span.plus a:hover { background-color: #414141; }
.search-result span.plus a i { color: #fff !important; }
.search-result span.border { display: block; width: 97%; margin: 0 15px; border-bottom: 1px dotted #ccc; }


/* #########################################
   #            PROFILE            #
   ######################################### */
@import url(http://fonts.googleapis.com/css?family=Lato:400,700);

.profile {
    min-height: 355px;
    display: inline-block;
}

figcaption.ratings{
    margin-top:20px;
}

figcaption.ratings a{
    color:#f1c40f;
    font-size:11px;
}

figcaption.ratings a:hover{
    color:#f39c12;
    text-decoration:none;
}

.divider {
    border-top:1px solid rgba(0,0,0,0.1);
}

.emphasis {
    border-top: 4px solid transparent;
}

.emphasis:hover {
    border-top: 4px solid #1abc9c;
}

.emphasis h2{
    margin-bottom:0;
}

span.tags {
    background: #1abc9c;
    border-radius: 2px;
    color: #f5f5f5;
    font-weight: bold;
    padding: 2px 4px;
}


.dropdown-menu .divider {
    background:none;
}

.dropdown-menu>li>a{
    color:#f5f5f5;
}

.dropup .dropdown-menu {
    margin-bottom:10px;
	background-color: #34495e;
    box-shadow: none;
    -webkit-box-shadow: none;
    width: 250px;
    margin-left: -125px;
    left: 50%;
}

.dropup .dropdown-menu:before {
    content: "";
    border-top: 10px solid #34495e;
    border-right: 10px solid transparent;
    border-left: 10px solid transparent;
    position: absolute;
    bottom: -10px;
    left: 50%;
    margin-left: -10px;
    z-index: 10;
}


/* #########################################
   #              REPORT FORM              #
   ######################################### */
#success_message{ display: none;}

